--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body{
 .card{
   width: 90%;
   max-width: 470px;
-  background: linear-gradient(135deg, #00feba, rgb(252, 176, 189));
-  color: #fff;
+  background: linear-gradient(135deg, #76ffdb, rgb(255, 142, 161));
+  color: #ffffff;
   margin: 100px auto 0;
   border-radius: 20px;
   padding: 40px 35px;
